added qr to websote for link

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>WebSocket Chat</h1>
+    <img
+      src="websocket chat.png"
+      alt="QR Code to website link"
+      width="200"
+      height="200"
+    />
+    <p>Scan the QR code to access the chat on your mobile device.</p>
+
     <ul id="messages"></ul>
     <div class="message-form">
       <input type="text" id="messageInput" placeholder="Type a message..." />
